tests/invalid/quant_constraint_2.err_exp
quant_constraint_2.m:016: In declaration of function `quant_constraint_2.q'/0:
quant_constraint_2.m:016:   error: type variable [38;5;87m`T'[39;49m is [38;5;171muniversally[39;49m
quant_constraint_2.m:016:   [38;5;171mconstrained,[39;49m but is [38;5;171mexistentially quantified.[39;49m
